# agentrs

./: .editorconfig  .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  justfile  nix-install.sh  pyproject.toml
.direnv/: flake-profile-1-link
agentrs/: __init__.py
agentrs-py/: README.md  setup.py
agentrs-py/agentrs/: __init__.py  version.py
agentrs-py/agentrs/agentpy/: __init__.py  agent.py  agentpy_types.py  datadict.py  environment.py  experiment.py  grid.py  model.py  network.py  object.py  sample.py  sequences.py  space.py  tools.py  visualization.py
src/: agent.rs  datadict.rs  lib.rs  model.rs  operation.rs
template/: .gitignore  README.md  default.nix  flake.nix  justfile  lock.json  pyproject.toml  runexp.py  zipexp.py
template/my-abm/: __init__.py
template/nix/: overlay.nix  python-overlay.nix
template/nix/python-pkgs/: pillow.nix
template/nix/python-pkgs/aiohttp/: default.nix  unvendor-llhttp.patch
tests/agentpy/: conftest.py  test_datadict.py  test_experiment.py  test_grid.py  test_model.py  test_network.py  test_object.py  test_sample.py  test_sequences.py  test_space.py  test_tools.py  test_visualization.py
