[package]
name = "agentrs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "agentrs_core"
crate-type = ["cdylib"]

[dependencies]
hecs = "0.10.4"
numpy = "^0.20.0"
polars = "^0.35.4"
pyo3 = "^0.20.0"
rayon = "^1.8.0"
rustc-hash = "^1.1.0"
