[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "my-abm"
version = "0.1.0"
requires-python = ">=3.7"
description = "Quickly develop and run ABMs!"
authors = [ {name = "Benedikt Arnarsson", email = "benediktjens.arnarsson@gmail.com"} ]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "agentrs",
  "numpy",
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"